@@ -300,7 +300,7 @@ SQLRETURN SQLColAttribute ( SQLHSTMT statement_handle,
 
     if ( column_number == 0 &&
             statement -> bookmarks_on == SQL_UB_OFF && statement -> connection -> bookmarks_on == SQL_UB_OFF &&
-            field_identifier != SQL_DESC_COUNT )
+            field_identifier != SQL_DESC_COUNT && field_identifier != SQL_COLUMN_COUNT )
     {
         dm_log_write( __FILE__, 
                 __LINE__, 
@@ -351,7 +351,7 @@ SQLRETURN SQLColAttribute ( SQLHSTMT statement_handle,
     }
     /* MS Driver manager passes this to driver
     else if ( statement -> state == STATE_S2 &&
-            field_identifier != SQL_DESC_COUNT )
+            field_identifier != SQL_DESC_COUNT && field_identifier != SQL_COLUMN_COUNT )
     {
         dm_log_write( __FILE__, 
                 __LINE__, 
