@@ -199,7 +199,7 @@ SQLRETURN SQLColAttributesW( SQLHSTMT statement_handle,
 
     if ( column_number == 0 &&
             statement -> bookmarks_on == SQL_UB_OFF && statement -> connection -> bookmarks_on == SQL_UB_OFF &&
-            field_identifier != SQL_DESC_COUNT )
+            field_identifier != SQL_DESC_COUNT && field_identifier != SQL_COLUMN_COUNT )
     {
         dm_log_write( __FILE__, 
                 __LINE__, 
@@ -255,7 +255,7 @@ SQLRETURN SQLColAttributesW( SQLHSTMT statement_handle,
         return function_return( SQL_HANDLE_STMT, statement, SQL_ERROR );
     }
     else if ( statement -> state == STATE_S2 &&
-            field_identifier != SQL_DESC_COUNT )
+            field_identifier != SQL_DESC_COUNT && field_identifier != SQL_COLUMN_COUNT  )
     {
         dm_log_write( __FILE__, 
                 __LINE__, 
